update for layer expansion

--- a/release/gff/gff_amharic_classic/source/gff_amharic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic.css
@@ -26,7 +26,8 @@
 
 .phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
 .phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
-.phone div.kmw-key.kmw-key-default[id$='T_1362']                                                            /* ። */
+.phone div.kmw-key.kmw-key-default[id$='T_1362'],                                                            /* ። */
+.phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift']     
   { background: #f4eee7 ; color: black ; }
 
 
@@ -124,7 +125,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1280'], .tablet div.kmw-key.kmw-key-default[id$='U_1280'],  /* ኀ */
 .phone div.kmw-key.kmw-key-default[id$='U_1290'], .tablet div.kmw-key.kmw-key-default[id$='U_1290'],  /* ነ */
 .phone div.kmw-key.kmw-key-default[id$='U_1298'], .tablet div.kmw-key.kmw-key-default[id$='U_1298'],  /* ኘ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A0'], .tablet div.kmw-key.kmw-key-default[id$='U_12A0'],  /* አ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12A0'], .tablet div.kmw-key.kmw-key-default[id$='U_12A0'],  *//* አ */
 .phone div.kmw-key.kmw-key-default[id$='U_12A8'], .tablet div.kmw-key.kmw-key-default[id$='U_12A8'],  /* ከ */
 .phone div.kmw-key.kmw-key-default[id$='U_12B8'], .tablet div.kmw-key.kmw-key-default[id$='U_12B8'],  /* ኸ */
 .phone div.kmw-key.kmw-key-default[id$='U_12C8'], .tablet div.kmw-key.kmw-key-default[id$='U_12C8'],  /* ወ */
@@ -168,7 +169,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1281'], .tablet div.kmw-key.kmw-key-default[id$='U_1281'],  /* ኁ */
 .phone div.kmw-key.kmw-key-default[id$='U_1291'], .tablet div.kmw-key.kmw-key-default[id$='U_1291'],  /* ኑ */
 .phone div.kmw-key.kmw-key-default[id$='U_1299'], .tablet div.kmw-key.kmw-key-default[id$='U_1299'],  /* ኙ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A1'], .tablet div.kmw-key.kmw-key-default[id$='U_12A1'],  /* ኡ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12A1'], .tablet div.kmw-key.kmw-key-default[id$='U_12A1'], */ /* ኡ */
 .phone div.kmw-key.kmw-key-default[id$='U_12A9'], .tablet div.kmw-key.kmw-key-default[id$='U_12A9'],  /* ኩ */
 .phone div.kmw-key.kmw-key-default[id$='U_12B9'], .tablet div.kmw-key.kmw-key-default[id$='U_12B9'],  /* ኹ */
 .phone div.kmw-key.kmw-key-default[id$='U_12C9'], .tablet div.kmw-key.kmw-key-default[id$='U_12C9'],  /* ዉ */
@@ -212,7 +213,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1282'], .tablet div.kmw-key.kmw-key-default[id$='U_1282'],  /* ኂ */
 .phone div.kmw-key.kmw-key-default[id$='U_1292'], .tablet div.kmw-key.kmw-key-default[id$='U_1292'],  /* ኒ */
 .phone div.kmw-key.kmw-key-default[id$='U_129A'], .tablet div.kmw-key.kmw-key-default[id$='U_129A'],  /* ኚ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A2'], .tablet div.kmw-key.kmw-key-default[id$='U_12A2'],  /* ኢ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12A2'], .tablet div.kmw-key.kmw-key-default[id$='U_12A2'],  *//* ኢ */
 .phone div.kmw-key.kmw-key-default[id$='U_12AA'], .tablet div.kmw-key.kmw-key-default[id$='U_12AA'],  /* ኪ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BA'], .tablet div.kmw-key.kmw-key-default[id$='U_12BA'],  /* ኺ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CA'], .tablet div.kmw-key.kmw-key-default[id$='U_12CA'],  /* ዊ */
@@ -255,7 +256,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1283'], .tablet div.kmw-key.kmw-key-default[id$='U_1283'],  /* ኃ */
 .phone div.kmw-key.kmw-key-default[id$='U_1293'], .tablet div.kmw-key.kmw-key-default[id$='U_1293'],  /* ና */
 .phone div.kmw-key.kmw-key-default[id$='U_129B'], .tablet div.kmw-key.kmw-key-default[id$='U_129B'],  /* ኛ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A3'], .tablet div.kmw-key.kmw-key-default[id$='U_12A3'],  /* ኣ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12A3'], .tablet div.kmw-key.kmw-key-default[id$='U_12A3'],  *//* ኣ */
 .phone div.kmw-key.kmw-key-default[id$='U_12AB'], .tablet div.kmw-key.kmw-key-default[id$='U_12AB'],  /* ካ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BB'], .tablet div.kmw-key.kmw-key-default[id$='U_12BB'],  /* ኻ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CB'], .tablet div.kmw-key.kmw-key-default[id$='U_12CB'],  /* ዋ */
@@ -298,7 +299,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1284'], .tablet div.kmw-key.kmw-key-default[id$='U_1284'],  /* ኄ */
 .phone div.kmw-key.kmw-key-default[id$='U_1294'], .tablet div.kmw-key.kmw-key-default[id$='U_1294'],  /* ኔ */
 .phone div.kmw-key.kmw-key-default[id$='U_129C'], .tablet div.kmw-key.kmw-key-default[id$='U_129C'],  /* ኜ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A4'], .tablet div.kmw-key.kmw-key-default[id$='U_12A4'],  /* ኤ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12A4'], .tablet div.kmw-key.kmw-key-default[id$='U_12A4'],  *//* ኤ */
 .phone div.kmw-key.kmw-key-default[id$='U_12AC'], .tablet div.kmw-key.kmw-key-default[id$='U_12AC'],  /* ኬ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BC'], .tablet div.kmw-key.kmw-key-default[id$='U_12BC'],  /* ኼ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CC'], .tablet div.kmw-key.kmw-key-default[id$='U_12CC'],  /* ዌ */
@@ -358,7 +359,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1286'], .tablet div.kmw-key.kmw-key-default[id$='U_1286'],  /* ኆ */
 .phone div.kmw-key.kmw-key-default[id$='U_1296'], .tablet div.kmw-key.kmw-key-default[id$='U_1296'],  /* ኖ */
 .phone div.kmw-key.kmw-key-default[id$='U_129E'], .tablet div.kmw-key.kmw-key-default[id$='U_129E'],  /* ኞ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A6'], .tablet div.kmw-key.kmw-key-default[id$='U_12A6'],  /* ኦ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12A6'], .tablet div.kmw-key.kmw-key-default[id$='U_12A6'],  *//* ኦ */
 .phone div.kmw-key.kmw-key-default[id$='U_12AE'], .tablet div.kmw-key.kmw-key-default[id$='U_12AE'],  /* ኮ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BE'], .tablet div.kmw-key.kmw-key-default[id$='U_12BE'],  /* ኾ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CE'], .tablet div.kmw-key.kmw-key-default[id$='U_12CE'],  /* ዎ */
@@ -409,7 +410,6 @@
 .phone div.kmw-key.kmw-key-default[id$='U_133F'], .tablet div.kmw-key.kmw-key-default[id$='U_133F'], /* ጿ */
 .phone div.kmw-key.kmw-key-default[id$='U_134F'], .tablet div.kmw-key.kmw-key-default[id$='U_134F'], /* ፏ */
 .phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357'],  /* ፗ */
-.phone div.kmw-key.kmw-key-default[id$='T_WWA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWA']
  /* { background:  #e1cec9  ; color: black; } */
     {
     background: #ffffff;  color: black ;
@@ -429,8 +429,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1384'], .tablet div.kmw-key.kmw-key-default[id$='U_1384'],  /* ᎄ */
 .phone div.kmw-key.kmw-key-default[id$='U_1388'], .tablet div.kmw-key.kmw-key-default[id$='U_1388'],  /* ᎈ */
 .phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C'],   /* ᎌ */
-.phone div.kmw-key.kmw-key-default[id$='T_WWE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWE'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWE']
+.phone div.kmw-key.kmw-key-default[id$='T_ዘመደ_ግዕዝ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ግዕዝ'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_ዘመደ_ግዕዝ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ግዕዝ']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
@@ -452,8 +452,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FA'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FA'], /* 𞟺 */
 .phone div.kmw-key.kmw-key-default[id$='U_138B'], .tablet div.kmw-key.kmw-key-default[id$='U_138B'],  /* ᎋ */
 .phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F'],  /* ᎏ */
-.phone div.kmw-key.kmw-key-default[id$='T_WWU'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU']
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWU'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU']
+.phone div.kmw-key.kmw-key-default[id$='T_ዘመደ_ካዕብ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ካዕብ']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_ዘመደ_ካዕብ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ካዕብ']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ffffb5 100%);
@@ -476,8 +476,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F8'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F8'], /* 𞟸 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FB'], /* 𞟻 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD'], /* 𞟽 */
-.phone div.kmw-key.kmw-key-default[id$='T_WWI'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWI'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI']
+.phone div.kmw-key.kmw-key-default[id$='T_ዘመደ_ሣልስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ሣልስ'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_ዘመደ_ሣልስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ሣልስ']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
@@ -491,8 +491,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12C3'], .tablet div.kmw-key.kmw-key-default[id$='U_12C3'], /* ዃ */
 .phone div.kmw-key.kmw-key-default[id$='U_1313'], .tablet div.kmw-key.kmw-key-default[id$='U_1313'], /* ጓ */
 .phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F'], /* ጟ */
-.phone div.kmw-key.kmw-key-default[id$='T_WWAA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWAA'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWAA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWAA']
+.phone div.kmw-key.kmw-key-default[id$='T_ዘመደ_ራብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ራብዕ'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_ዘመደ_ራብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ራብዕ']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
@@ -514,8 +514,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F9'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F9'], /* 𞟹 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FC'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FC'], /* 𞟼 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE'], /* 𞟾 */
-.phone div.kmw-key.kmw-key-default[id$='T_WWEE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWEE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE']
+.phone div.kmw-key.kmw-key-default[id$='T_ዘመደ_ኃምስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ኃምስ'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_ዘመደ_ኃምስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ዘመደ_ኃምስ']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
