--- a/release/gff/gff_amharic_classic/source/gff_amharic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic.css
@@ -409,7 +409,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1337'], .tablet div.kmw-key.kmw-key-default[id$='U_1337'], /* ጷ */
 .phone div.kmw-key.kmw-key-default[id$='U_133F'], .tablet div.kmw-key.kmw-key-default[id$='U_133F'], /* ጿ */
 .phone div.kmw-key.kmw-key-default[id$='U_134F'], .tablet div.kmw-key.kmw-key-default[id$='U_134F'], /* ፏ */
-.phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357'],  /* ፗ */
+.phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357']  /* ፗ */
  /* { background:  #e1cec9  ; color: black; } */
     {
     background: #ffffff;  color: black ;
