layer and css refinement.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -129,7 +129,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12A8'], .tablet div.kmw-key.kmw-key-default[id$='U_12A8'],  /* ከ */
 .phone div.kmw-key.kmw-key-default[id$='U_12B8'], .tablet div.kmw-key.kmw-key-default[id$='U_12B8'],  /* ኸ */
 .phone div.kmw-key.kmw-key-default[id$='U_12C8'], .tablet div.kmw-key.kmw-key-default[id$='U_12C8'],  /* ወ */
-.phone div.kmw-key.kmw-key-default[id$='U_12D0'], .tablet div.kmw-key.kmw-key-default[id$='U_12D0'],  /* ዐ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12D0'], .tablet div.kmw-key.kmw-key-default[id$='U_12D0'],  *//* ዐ */
 .phone div.kmw-key.kmw-key-default[id$='U_12D8'], .tablet div.kmw-key.kmw-key-default[id$='U_12D8'],  /* ዘ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E0'], .tablet div.kmw-key.kmw-key-default[id$='U_12E0'],  /* ዠ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E8'], .tablet div.kmw-key.kmw-key-default[id$='U_12E8'],  /* የ */
@@ -173,7 +173,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12A9'], .tablet div.kmw-key.kmw-key-default[id$='U_12A9'],  /* ኩ */
 .phone div.kmw-key.kmw-key-default[id$='U_12B9'], .tablet div.kmw-key.kmw-key-default[id$='U_12B9'],  /* ኹ */
 .phone div.kmw-key.kmw-key-default[id$='U_12C9'], .tablet div.kmw-key.kmw-key-default[id$='U_12C9'],  /* ዉ */
-.phone div.kmw-key.kmw-key-default[id$='U_12D1'], .tablet div.kmw-key.kmw-key-default[id$='U_12D1'],  /* ዑ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12D1'], .tablet div.kmw-key.kmw-key-default[id$='U_12D1'],  *//* ዑ */
 .phone div.kmw-key.kmw-key-default[id$='U_12D9'], .tablet div.kmw-key.kmw-key-default[id$='U_12D9'],  /* ዙ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E1'], .tablet div.kmw-key.kmw-key-default[id$='U_12E1'],  /* ዡ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E9'], .tablet div.kmw-key.kmw-key-default[id$='U_12E9'],  /* ዩ */
@@ -217,7 +217,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12AA'], .tablet div.kmw-key.kmw-key-default[id$='U_12AA'],  /* ኪ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BA'], .tablet div.kmw-key.kmw-key-default[id$='U_12BA'],  /* ኺ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CA'], .tablet div.kmw-key.kmw-key-default[id$='U_12CA'],  /* ዊ */
-.phone div.kmw-key.kmw-key-default[id$='U_12D2'], .tablet div.kmw-key.kmw-key-default[id$='U_12D2'],  /* ዒ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12D2'], .tablet div.kmw-key.kmw-key-default[id$='U_12D2'], */ /* ዒ */
 .phone div.kmw-key.kmw-key-default[id$='U_12DA'], .tablet div.kmw-key.kmw-key-default[id$='U_12DA'],  /* ዚ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E2'], .tablet div.kmw-key.kmw-key-default[id$='U_12E2'],  /* ዢ */
 .phone div.kmw-key.kmw-key-default[id$='U_12EA'], .tablet div.kmw-key.kmw-key-default[id$='U_12EA'],  /* ዪ */
@@ -260,7 +260,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12AB'], .tablet div.kmw-key.kmw-key-default[id$='U_12AB'],  /* ካ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BB'], .tablet div.kmw-key.kmw-key-default[id$='U_12BB'],  /* ኻ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CB'], .tablet div.kmw-key.kmw-key-default[id$='U_12CB'],  /* ዋ */
-.phone div.kmw-key.kmw-key-default[id$='U_12D3'], .tablet div.kmw-key.kmw-key-default[id$='U_12D3'],  /* ዓ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12D3'], .tablet div.kmw-key.kmw-key-default[id$='U_12D3'], */ /* ዓ */
 .phone div.kmw-key.kmw-key-default[id$='U_12DB'], .tablet div.kmw-key.kmw-key-default[id$='U_12DB'],  /* ዛ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E3'], .tablet div.kmw-key.kmw-key-default[id$='U_12E3'],  /* ዣ */
 .phone div.kmw-key.kmw-key-default[id$='U_12EB'], .tablet div.kmw-key.kmw-key-default[id$='U_12EB'],  /* ያ */
@@ -303,7 +303,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12AC'], .tablet div.kmw-key.kmw-key-default[id$='U_12AC'],  /* ኬ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BC'], .tablet div.kmw-key.kmw-key-default[id$='U_12BC'],  /* ኼ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CC'], .tablet div.kmw-key.kmw-key-default[id$='U_12CC'],  /* ዌ */
-.phone div.kmw-key.kmw-key-default[id$='U_12D4'], .tablet div.kmw-key.kmw-key-default[id$='U_12D4'],  /* ዔ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12D4'], .tablet div.kmw-key.kmw-key-default[id$='U_12D4'],  *//* ዔ */
 .phone div.kmw-key.kmw-key-default[id$='U_12DC'], .tablet div.kmw-key.kmw-key-default[id$='U_12DC'],  /* ዜ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E4'], .tablet div.kmw-key.kmw-key-default[id$='U_12E4'],  /* ዤ */
 .phone div.kmw-key.kmw-key-default[id$='U_12EC'], .tablet div.kmw-key.kmw-key-default[id$='U_12EC'],  /* ዬ */
@@ -363,7 +363,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12AE'], .tablet div.kmw-key.kmw-key-default[id$='U_12AE'],  /* ኮ */
 .phone div.kmw-key.kmw-key-default[id$='U_12BE'], .tablet div.kmw-key.kmw-key-default[id$='U_12BE'],  /* ኾ */
 .phone div.kmw-key.kmw-key-default[id$='U_12CE'], .tablet div.kmw-key.kmw-key-default[id$='U_12CE'],  /* ዎ */
-.phone div.kmw-key.kmw-key-default[id$='U_12D6'], .tablet div.kmw-key.kmw-key-default[id$='U_12D6'],  /* ዖ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_12D6'], .tablet div.kmw-key.kmw-key-default[id$='U_12D6'], */ /* ዖ */
 .phone div.kmw-key.kmw-key-default[id$='U_12DE'], .tablet div.kmw-key.kmw-key-default[id$='U_12DE'],  /* ዞ */
 .phone div.kmw-key.kmw-key-default[id$='U_12E6'], .tablet div.kmw-key.kmw-key-default[id$='U_12E6'],  /* ዦ */
 .phone div.kmw-key.kmw-key-default[id$='U_12EE'], .tablet div.kmw-key.kmw-key-default[id$='U_12EE'],  /* ዮ */
@@ -835,3 +835,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     box-shadow: 0;
 }
 */
+
+.phone.ios div.kmw-key.kmw-key-special[id$='K_ENTER'] span.kmw-key-text
+    {font-family: "Arial"; background-color: #ece1d5; color: #000000; }
