--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -27,7 +27,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
 .phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
 .phone div.kmw-key.kmw-key-default[id$='T_1362'],                                                            /* ። */
-.phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift']     
+.phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift'],                                                 /* ? */
+.phone div.kmw-key.kmw-key-deadkey[id$='T_SPACER']     
   { background: #f4eee7 ; color: black ; }
 
 
@@ -72,7 +73,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_9'], .tablet div.kmw-key.kmw-key-default[id$='K_9'], /* 9 */
 .phone div.kmw-key.kmw-key-default[id$='K_0'], .tablet div.kmw-key.kmw-key-default[id$='K_0'], /* 0 */
 .tablet div.kmw-key.kmw-key-default[id$='K_HYPHEN'], .tablet div.kmw-key.kmw-key-default[id$='K_EQUAL'], 
-.kmw-keyboard-gff_amharic #amharic-etens-extra-T_MORE  /* ▶ */
+.kmw-keyboard-gff_amharic_classic#amharic-etens-extra-T_MORE  /* ▶ */
   { background:  #ebece6 ; color: black ; }
 
 /* amharic-extra layer: ge'ez numerals */
@@ -87,7 +88,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1370'], .tablet div.kmw-key.kmw-key-default[id$='U_1370'], /* ፰ */
 .phone div.kmw-key.kmw-key-default[id$='U_1371'], .tablet div.kmw-key.kmw-key-default[id$='U_1371'], /* ፱ */
 /* .phone div.kmw-key.kmw-key-default[id$='U_1372'], .tablet div.kmw-key.kmw-key-default[id$='U_1372'], */  /* ፲ */
-.kmw-keyboard-gff_amharic #amharic-tens-extra-T_MORE  /* ▶ */
+.kmw-keyboard-gff_amharic_classic#amharic-tens-extra-T_MORE  /* ▶ */
   { background:  #ece1d5 ; color: black ; }
 
 .phone div.kmw-key.kmw-key-default[id$='U_1372'], .tablet div.kmw-key.kmw-key-default[id$='U_1372'], /* ፲ */
@@ -102,7 +103,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_137B'], .tablet div.kmw-key.kmw-key-default[id$='U_137B'], /* ፻ */
 .phone div.kmw-key.kmw-key-default[id$='T_THOUSAND'], .tablet div.kmw-key.kmw-key-default[id$='T_THOUSAND'], /* ፲፻ */ 
 .phone div.kmw-key.kmw-key-default[id$='U_137C'], .tablet div.kmw-key.kmw-key-default[id$='U_137C'],  /* ፼ */
-/* .kmw-keyboard-gff_amharic #amharic-extra-T_MORE, */
+/* .kmw-keyboard-gff_amharic_classic#amharic-extra-T_MORE, */
 .phone div.kmw-key.kmw-key-special[id$='extra-T_MORE'] /* ▶ */
   { background:  #f3d6ce ; color: black ; }
 
@@ -146,8 +147,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1348'], .tablet div.kmw-key.kmw-key-default[id$='U_1348'],  /* ፈ */
 .phone div.kmw-key.kmw-key-default[id$='U_1350'], .tablet div.kmw-key.kmw-key-default[id$='U_1350'],  /* ፐ */
 .phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   /* አ */
-.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_2\+shift,
-           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1360  /* @, ፠ */
+.phone .kmw-keyboard-gff_amharic_classic#latin-punct-layer-K_2\+shift,
+           .phone .kmw-keyboard-gff_amharic_classic#ethio-punct-layer-T_1360  /* @, ፠ */
   { background: #e2f0cb ; color: black; } /*#baed91 */
 
 /* default layer ካዕብ */
@@ -190,8 +191,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1349'], .tablet div.kmw-key.kmw-key-default[id$='U_1349'],  /* ፉ */
 .phone div.kmw-key.kmw-key-default[id$='U_1351'], .tablet div.kmw-key.kmw-key-default[id$='U_1351'],  /* ፑ */
 .phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   /* ኡ */
-.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_4\+shift,
-           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1365  /* $, ፥ */
+.phone .kmw-keyboard-gff_amharic_classic#latin-punct-layer-K_4\+shift,
+           .phone .kmw-keyboard-gff_amharic_classic#ethio-punct-layer-T_1365  /* $, ፥ */
   { background: #ffffb5 ; color: black; } /* #faf884 */ 
 
 /* default layer ሣልስ */
@@ -320,8 +321,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_134C'], .tablet div.kmw-key.kmw-key-default[id$='U_134C'],  /* ፌ */
 .phone div.kmw-key.kmw-key-default[id$='U_1354'], .tablet div.kmw-key.kmw-key-default[id$='U_1354'],  /* ፔ */
 .phone div.kmw-key.kmw-key-default[id$='T_ኃምስ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ኃምስ'],  /* ኤ */
-.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_SLASH,
-           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1363  /* /, ፣ */
+.phone .kmw-keyboard-gff_amharic_classic#latin-punct-layer-K_SLASH,
+           .phone .kmw-keyboard-gff_amharic_classic#ethio-punct-layer-T_1363  /* /, ፣ */
   { background: #e0d7ff ; color: black; } /* #f2a2e8 */
 
 
@@ -380,8 +381,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_134E'], .tablet div.kmw-key.kmw-key-default[id$='U_134E'],  /* ፎ */
 .phone div.kmw-key.kmw-key-default[id$='U_1356'], .tablet div.kmw-key.kmw-key-default[id$='U_1356'],  /* ፖ */
 .phone div.kmw-key.kmw-key-default[id$='T_ሳብዕ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ሳብዕ'],   /* ኦ */
-.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_SLASH\+shift,
-.phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1364    /* ?, ፤︁ */
+.phone .kmw-keyboard-gff_amharic_classic#latin-punct-layer-K_SLASH\+shift,
+.phone .kmw-keyboard-gff_amharic_classic#ethio-punct-layer-T_1364    /* ?, ፤︁ */
   { background: #fad6b6 ; color: black; } /* f8b88b*/
 
 /* default layer ዘመደ-ራብዕ */
@@ -526,32 +527,31 @@
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 
-.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_EQUAL,  
+.tablet.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_HYPHEN, .tablet.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_EQUAL,  
 /*
-.ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic_classic#punctuation-2-K_2\+shift,
 */
-.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, 
-.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
-.ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
-.ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
+.tablet.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_1\+shift, 
+.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic_classic#punctuation-2-K_1\+shift,
+.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic_classic#punctuation-2-K_SLASH\+shift,
+.ios .kmw-keyboard-gff_amharic_classic#punctuation-K_4\+shift
   {background: #fdfdfe ; color: black ; }
 
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1225'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1225'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
-.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_EQUAL, 
-.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
-.android .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
-.android .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
-.android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift,
-.android .kmw-keyboard-gff_amharic #amharic-extra-K_SLASH\+shift , .phone.android .kmw-keyboard-gff_amharic #amharic-extra-2-K_SLASH\+shift,
+.tablet.android .kmw-keyboard-gff_amharic_classic#punctuation-K_HYPHEN, .tablet.android .kmw-keyboard-gff_amharic_classic#punctuation-K_EQUAL, 
+.android .kmw-keyboard-gff_amharic_classic#punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic_classic#punctuation-2-K_1\+shift,
+.android .kmw-keyboard-gff_amharic_classic#punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic_classic#punctuation-2-K_2\+shift,
+.android .kmw-keyboard-gff_amharic_classic#punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic_classic#punctuation-2-K_SLASH\+shift,
+.android .kmw-keyboard-gff_amharic_classic#punctuation-K_4\+shift,
+.android .kmw-keyboard-gff_amharic_classic#amharic-extra-K_SLASH\+shift , .phone.android .kmw-keyboard-gff_amharic_classic#amharic-extra-2-K_SLASH\+shift,
 .phone.android div.kmw-key.kmw-key-default[id$='extra-K_SLASH+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_SLASH+shift'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift']
 /* .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367'] */
   {background: #777 ; color: white ; } 
 
 /* change hint color for colored keys */
-
 div.kmw-key.kmw-key-default[id$='K_1']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_2']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_3']  div.kmw-key-popup-icon.kmw-key-text,
