CSS fix for deadkeys

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -12,7 +12,8 @@
 .phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'],   .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'],   .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY'],
-.phone div.kmw-key.kmw-key-default[id$='T_STOP'],   .tablet div.kmw-key.kmw-key-default[id$='T_STOP']
+.phone div.kmw-key.kmw-key-default[id$='T_STOP'],   .tablet div.kmw-key.kmw-key-default[id$='T_STOP'],
+.phone div.kmw-key.kmw-key-deadkey[id$='T_SPACER']     
 /* { background: #f3d6ce  ; color: black; } */
   { background: #ece1d5 ; color: black ; }
 
@@ -21,7 +22,9 @@
 
 /* default layers: latin punctuation */
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
-  { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
+  { background: #ece1d5 ; color: #ece1d5 ; } 
+  /* { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
+
 
 /* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'],  .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
 
@@ -30,8 +33,10 @@
 /* .phone div.kmw-key.kmw-key-default[id$='T_1362'],                                                            /* ። */
 /* .phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift'],                                                 /* ? */
 
+/*
 .phone div.kmw-key.kmw-key-deadkey[id$='T_SPACER']     
   { background: #f4eee7 ; color: black ; }
+  */
 
 
 /* amharic-extra layer:  punctuation */
