Completion of the iPad layers.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -13,7 +13,7 @@
 .phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'],   .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY'],
 .phone div.kmw-key.kmw-key-default[id$='T_STOP'],   .tablet div.kmw-key.kmw-key-default[id$='T_STOP'],
-.phone div.kmw-key.kmw-key-deadkey[id$='T_SPACER']     
+.phone div.kmw-key.kmw-key-deadkey[id$='T_SPACER'], .tablet div.kmw-key.kmw-key-deadkey[id$='T_SPACER']  
 /* { background: #f3d6ce  ; color: black; } */
   { background: #ece1d5 ; color: black ; }
 
@@ -845,5 +845,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 }
 */
 
-div.kmw-key.kmw-key-special[id$='K_ENTER'] span.kmw-key-text
+div.kmw-key.kmw-key-special[id$='K_ENTER'] span.kmw-key-text,
+div.kmw-key.kmw-key-special[id$='K_SHIFT'] span.kmw-key-text
     {font-family: "Arial"; background-color: #ece1d5; color: #000000; }
