Punctuation layers refinements to mirror iPhone.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -79,7 +79,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_8'], .tablet div.kmw-key.kmw-key-default[id$='K_8'], /* 8 */
 .phone div.kmw-key.kmw-key-default[id$='K_9'], .tablet div.kmw-key.kmw-key-default[id$='K_9'], /* 9 */
 .phone div.kmw-key.kmw-key-default[id$='K_0'], .tablet div.kmw-key.kmw-key-default[id$='K_0'], /* 0 */
-.tablet div.kmw-key.kmw-key-default[id$='K_HYPHEN'], .tablet div.kmw-key.kmw-key-default[id$='K_EQUAL'], 
+/*.tablet div.kmw-key.kmw-key-default[id$='K_HYPHEN'], .tablet div.kmw-key.kmw-key-default[id$='K_EQUAL'], */
 .kmw-keyboard-gff_amharic_classic#amharic-etens-extra-T_MORE  /* ▶ */
   { background:  #ebece6 ; color: black ; }
 
