--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -655,6 +655,7 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2019'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_BKSLASH'],
 
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_QUOTE'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201C'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201D'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201E'],
@@ -717,23 +718,14 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
 .phone.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'], .tablet.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'],
 .phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.ios div.kmw-key.kmw-key-default[id='ኘ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ኘ-layer-U_129D'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'],
 .phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
-.phone.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጘ-layer-K_G+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-layer-K_G+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቐ-layer-K_Q+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ቐ-layer-K_Q+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
 
-.phone.ios div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
-.phone.ios div.kmw-key.kmw-key-default[id='ዠ-extra-U_12E5'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሠ-extra-U_1225'],
-.phone.ios div.kmw-key.kmw-key-default[id='ኸ-extra-K_K+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ኀ-extra-U_1285'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፀ-extra-U_1345'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፐ-extra-K_P'],
-.phone.ios div.kmw-key.kmw-key-default[id='ቨ-extra-K_V'],
-
-.tablet.ios div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
-.tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_1E318'],
-.tablet.ios div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5'],
+.tablet.ios div.kmw-key.kmw-key-default[id='𞟠-layer-U_1E7E5'],
 
 .phone.ios div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.ios div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
 {
@@ -793,22 +785,11 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.android div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.android div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
 .phone.android div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'], .tablet.android div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'],
 .phone.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.android div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ኘ-layer-U_129D'],
+.phone.android div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'],
 .phone.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
-.phone.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
-
-.phone.android div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
-.phone.android div.kmw-key.kmw-key-default[id='ዠ-extra-U_12E5'],
-.phone.android div.kmw-key.kmw-key-default[id='ሠ-extra-U_1225'],
-.phone.android div.kmw-key.kmw-key-default[id='ኸ-extra-K_K+shift'],
-.phone.android div.kmw-key.kmw-key-default[id='ኀ-extra-U_1285'],
-.phone.android div.kmw-key.kmw-key-default[id='ፀ-extra-U_1345'],
-.phone.android div.kmw-key.kmw-key-default[id='ፐ-extra-K_P'],
-.phone.android div.kmw-key.kmw-key-default[id='ቨ-extra-K_V'],
-
-.tablet.android div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
-.tablet.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_1E318'],
+.phone.android div.kmw-key.kmw-key-default[id='ጘ-layer-K_G+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጘ-layer-K_G+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ቐ-layer-K_Q+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ቐ-layer-K_Q+shift'],
 .tablet.android div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5']
 {
     border-style: solid;
@@ -848,3 +829,8 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 div.kmw-key.kmw-key-special[id$='K_ENTER'] span.kmw-key-text,
 div.kmw-key.kmw-key-special[id$='K_SHIFT'] span.kmw-key-text
     {font-family: "Arial"; background-color: #ece1d5; color: #000000; }
+
+div.kmw-key.kmw-key-default[id^='punctuation'] span.kmw-key-text,
+div.kmw-key.kmw-key-special[id^='punctuation'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id^='popup-punctuation'] span.kmw-key-text
+{font-family: "Arial" }
