Additions of missing key flicks.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -828,9 +828,13 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 
 div.kmw-key.kmw-key-special[id$='K_ENTER'] span.kmw-key-text,
 div.kmw-key.kmw-key-special[id$='K_SHIFT'] span.kmw-key-text
+  { background-color: #ece1d5; color: #000000; }
+/*
     {font-family: "Arial"; background-color: #ece1d5; color: #000000; }
-
+    */
+/*
 div.kmw-key.kmw-key-default[id^='punctuation'] span.kmw-key-text,
 div.kmw-key.kmw-key-special[id^='punctuation'] span.kmw-key-text,
 div.kmw-key.kmw-key-default[id^='popup-punctuation'] span.kmw-key-text
 {font-family: "Arial" }
+*/
