--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -595,7 +595,7 @@ div.kmw-key.kmw-key-default[id$='T_ሳብዕ']  div.kmw-key-popup-icon.kmw-key-t
 
 div.kmw-key.kmw-key-default[id$='_1360']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='_1361']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id$='_1362']  div.kmw-key-popup-icon.kmw-key-text,
+/* div.kmw-key.kmw-key-default[id$='_1362']  div.kmw-key-popup-icon.kmw-key-text, */
 
 .phone div.kmw-key.kmw-key-default[id$='layer-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
 .phone div.kmw-key.kmw-key-default[id='default-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
@@ -609,7 +609,19 @@ div.kmw-key.kmw-key-default[id$='_00BB']  div.kmw-key-popup-icon.kmw-key-text,
 /* phone only */
 div.kmw-key.kmw-key-default[id='latin-punct-layer-K_SLASH'] div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id='latin-punct-layer-K_SLASH+shift'] div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-icon.kmw-key-text
+div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-icon.kmw-key-text,
+
+/* orders of ten on phones */
+div.kmw-key.kmw-key-default[id$='_1372']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1373']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1374']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1375']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1376']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1377']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1378']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_1379']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_137A']  div.kmw-key-popup-icon.kmw-key-text, 
+div.kmw-key.kmw-key-default[id$='_137B']  div.kmw-key-popup-icon.kmw-key-text
 {color:  #777 ; }
 
 /* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], */
