Set popup test to use system font.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -840,13 +840,20 @@ div.kmw-key.kmw-key-default[id$='_137B']  div.kmw-key-popup-icon.kmw-key-text
 
 div.kmw-key.kmw-key-special[id$='K_ENTER'] span.kmw-key-text,
 div.kmw-key.kmw-key-special[id$='K_SHIFT'] span.kmw-key-text
-  { background-color: #ece1d5; color: #000000; }
-/*
-    {font-family: "Arial"; background-color: #ece1d5; color: #000000; }
-    */
-/*
+    {font-family: system-ui, -apple-system, 'San Francisco', 'Segoe UI', Arial; background-color: #ece1d5; color: #000000; }
+
 div.kmw-key.kmw-key-default[id^='punctuation'] span.kmw-key-text,
 div.kmw-key.kmw-key-special[id^='punctuation'] span.kmw-key-text,
-div.kmw-key.kmw-key-default[id^='popup-punctuation'] span.kmw-key-text
-{font-family: "Arial" }
-*/
+div.kmw-key.kmw-key-default[id^='popup-punctuation'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_SLASH+shift'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-K_1+shift'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-U_2019'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-U_003A'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-U_002C'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-U_002E'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-K_SLASH'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-U_00AB'] span.kmw-key-text,
+div.kmw-key.kmw-key-default[id='popup-default-U_00BB'] span.kmw-key-text,
+div.kmw-key-popup-icon.kmw-key-text
+{font-family: system-ui, -apple-system, 'San Francisco', 'Segoe UI', Arial; }
+
