Final waves of missing pop up additions.

--- a/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic_classic.css
@@ -337,10 +337,14 @@
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1235'],   /* ስ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1265'],  /* ብ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_126D'],  /* ቭ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1275'],  /* ት */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_127D'],  /* ች */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1295'],  /* ን */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_129D'],   /* ኝ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_12DD'],  /* ዝ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_12E5'],  /* ዥ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1325'],  /* ጥ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_132D'],  /* ጭ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1335'],  /* ጵ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_133D'],  /* ጽ */
 #kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1345'],  /* ፅ */
@@ -689,8 +693,10 @@ div.kmw-key.kmw-key-default[id$='_137B']  div.kmw-key-popup-icon.kmw-key-text
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='shift'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_1368'],
 
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1255'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1285'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_12BD']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_12BD'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_131D']
 {
   border-color: #d0d3d9;
   border-style: solid;
